2006-01-03  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        REGRESSION: repro crash w/ invalid charset attribute on <script>
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6345

        * fast/loader/invalid-charset-on-script-crashes-loader-expected.txt: Added.
        * fast/loader/invalid-charset-on-script-crashes-loader.html: Added.
        * fast/loader/resources/invalid-charset-on-script-crashes-loader.js: Added.

2006-01-03  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.

        - add tests for http://bugzilla.opendarwin.org/show_bug.cgi?id=6358
        JS objects missing "prototype" properties
        
        * fast/js/test-prototypes-expected.txt: Added.
        * fast/js/test-prototypes.html: Added.

2006-01-03  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Add test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6357
        REGRESSION: iframe and target is broken
        
        * fast/frames/iframe-target-expected.txt: Added.
        * fast/frames/iframe-target.html: Added.

2006-01-03  Justin Garcia  <justin.garcia@apple.com>
        
        New/updated layout tests for:
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4904>
        Bug with baseOffset and extentOffset in selections (for writely.com)
        <rdar://problem/4259818>
        selection object incorrect after double-clicking a word

        * editing/selection/anchor-focus1-expected.txt: Added.
        * editing/selection/anchor-focus1.html: Added.
        * editing/selection/anchor-focus2-expected.txt: Added.
        * editing/selection/anchor-focus2.html: Added.
        * editing/selection/anchor-focus3-expected.txt: Added.
        * editing/selection/anchor-focus3.html: Added.
        * editing/selection/getRangeAt-expected.txt: Added.
        * editing/selection/getRangeAt.html: Added.
        * editing/selection/unrendered-001-expected.txt:

2006-01-03  Anders Carlsson  <andersca@mac.com>
