@@ -1,0 +1,6 @@
+EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
+This tests Selection::toString(): that it exists, that it returns the same result as the implicit toString call, and that it returns the correct results.
+
+hello world
+Success
+
