@@ -1,3 +1,15 @@
+2006-01-03  Justin Garcia  <justin.garcia@apple.com>
+
+        Reviewed by harrison
+        
+        Layout test for:
+        <http://bugzilla.opendarwin.org/show_bug.cgi?id=4609>
+        window.getSelection().toString() is undefined (range object 
+        returned from window.getSelection() is useless)
+
+        * editing/selection/toString-expected.txt: Added.
+        * editing/selection/toString.html: Added.
+
 2006-01-03  Eric Seidel  <eseidel@apple.com>
 
         Reviewed by darin.
